[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/story14.png" type="Texture" id=1]
[ext_resource path="res://Script/store_t-shirt.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/StoreMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/CanvasLayer.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Store3" type="Sprite" parent="."]
position = Vector2( 640, 360.25 )
scale = Vector2( 1, 0.999306 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button_t-shirt_yellow" type="Button" parent="."]
show_behind_parent = true
margin_left = 22.0
margin_top = 287.0
margin_right = 254.0
margin_bottom = 575.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_t-shirt_black" type="Button" parent="."]
show_behind_parent = true
margin_left = 279.0
margin_top = 288.0
margin_right = 514.0
margin_bottom = 572.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_t-shirt_purple" type="Button" parent="."]
show_behind_parent = true
margin_left = 542.0
margin_top = 287.0
margin_right = 772.0
margin_bottom = 571.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_t-shirt_green" type="Button" parent="."]
show_behind_parent = true
margin_left = 793.0
margin_top = 284.0
margin_right = 1020.0
margin_bottom = 572.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button_t-shirt_pink" type="Button" parent="."]
show_behind_parent = true
margin_left = 1037.0
margin_top = 285.0
margin_right = 1259.0
margin_bottom = 572.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 1059.0
margin_top = 454.0
margin_right = 1236.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 821.0
margin_top = 454.0
margin_right = 999.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 572.0
margin_top = 454.0
margin_right = 745.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 306.0
margin_top = 454.0
margin_right = 490.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel1" type="RichTextLabel" parent="."]
margin_left = 51.0
margin_top = 454.0
margin_right = 221.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( -211, 347 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = 16.0
margin_top = 11.0
margin_right = 36.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
show_behind_parent = true
margin_left = 41.0
margin_top = 11.0
margin_right = 61.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Button_t-shirt_yellow" to="." method="_on_Button_tshirt_yellow_pressed"]
[connection signal="pressed" from="Button_t-shirt_black" to="." method="_on_Button_tshirt_black_pressed"]
[connection signal="pressed" from="Button_t-shirt_purple" to="." method="_on_Button_tshirt_purple_pressed"]
[connection signal="pressed" from="Button_t-shirt_green" to="." method="_on_Button_tshirt_green_pressed"]
[connection signal="pressed" from="Button_t-shirt_pink" to="." method="_on_Button_tshirt_pink_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
